tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause4.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ExtendsOrImplementsClause4.ts (2 errors) ====
    class C extends A implements {
                      ~~~~~~~~~~
!!! parserErrorRecovery_ExtendsOrImplementsClause4.ts(1,19): error TS1097: 'implements' list cannot be empty.
                    ~
!!! parserErrorRecovery_ExtendsOrImplementsClause4.ts(1,17): error TS2095: Cannot find name 'A'.
    }